--- a/server/Phlox.API/appsettings.Development.json
+++ b/server/Phlox.API/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Keycloak": {
+    "Authority": "http://localhost:8080/realms/phlox",
+    "Audience": "phlox-api",
+    "ValidIssuer": "http://localhost:8080/realms/phlox",
+    "RequireHttpsMetadata": false
+  },
+  "Cors": {
+    "AllowedOrigins": [ "http://localhost:5173" ]
   }
 }
