--- a/server/Phlox.API/appsettings.json
+++ b/server/Phlox.API/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=phlox_db;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Keycloak": {
+    "Authority": "http://localhost:8080/realms/phlox",
+    "Audience": "phlox-api",
+    "ValidIssuer": "http://localhost:8080/realms/phlox",
+    "RequireHttpsMetadata": false
+  },
+  "Cors": {
+    "AllowedOrigins": [ "http://localhost:5173" ]
+  }
 }
