--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,17 @@ services:
       - "5432:5432"  
     volumes:
       - postgres_data:/var/lib/postgresql/data  
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:26.5.1
+    container_name: keycloak
+    ports:
+      - "127.0.0.1:8080:8080"  
+    environment:
+      KC_BOOTSTRAP_ADMIN_USERNAME: admin   
+      KC_BOOTSTRAP_ADMIN_PASSWORD: admin   
+    command: start-dev  
+
 volumes:
   qdrant_data:
     driver: local
