--- a/server/Phlox.API/appsettings.Development.json
+++ b/server/Phlox.API/appsettings.Development.json
@@ -5,11 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Keycloak": {
-    "Authority": "http://localhost:8080/realms/phlox",
-    "Audience": "phlox-api",
-    "ValidIssuer": "http://localhost:8080/realms/phlox",
-    "RequireHttpsMetadata": false
+  "Jwt": {
+    "Secret": "development-secret-key-minimum-32-characters-long!",
+    "Issuer": "phlox-api",
+    "Audience": "phlox-app",
+    "ExpirationMinutes": 60
   },
   "Cors": {
     "AllowedOrigins": [ "http://localhost:5173" ]
