--- a/server/Phlox.API/appsettings.json
+++ b/server/Phlox.API/appsettings.json
@@ -7,13 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=phlox_db;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "User ID=postgres;Password=example;Host=localhost;Port=5432;Database=phlox;Pooling=true;Min Pool Size=0;Max Pool Size=100;Connection Lifetime=0;"
   },
-  "Keycloak": {
-    "Authority": "http://localhost:8080/realms/phlox",
-    "Audience": "phlox-api",
-    "ValidIssuer": "http://localhost:8080/realms/phlox",
-    "RequireHttpsMetadata": false
+  "Jwt": {
+    "Secret": "your-super-secret-key-that-should-be-at-least-32-characters-long",
+    "Issuer": "phlox-api",
+    "Audience": "phlox-app",
+    "ExpirationMinutes": 60
   },
   "Cors": {
     "AllowedOrigins": [ "http://localhost:5173" ]
