--- a/server/Phlox.API/appsettings.json
+++ b/server/Phlox.API/appsettings.json
@@ -7,15 +7,33 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=phlox_db;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=phlox;Username=postgres;Password=example"
   },
-  "Keycloak": {
-    "Authority": "http://localhost:8080/realms/phlox",
-    "Audience": "phlox-api",
-    "ValidIssuer": "http://localhost:8080/realms/phlox",
-    "RequireHttpsMetadata": false
+  "Jwt": {
+    "Secret": "your-super-secret-key-that-should-be-at-least-32-characters-long",
+    "Issuer": "phlox-api",
+    "Audience": "phlox-app",
+    "ExpirationMinutes": 60
   },
   "Cors": {
     "AllowedOrigins": [ "http://localhost:5173" ]
+  },
+  "Qdrant": {
+    "Host": "localhost",
+    "Port": 6334,
+    "CollectionName": "documents",
+    "VectorSize": 384,
+    "UseTls": false
+  },
+  "DocumentSlicer": {
+    "ModelPath": "Models/sat-3l-sm.onnx",
+    "TokenizerPath": "Models/sentencepiece.bpe.model",
+    "MaxLength": 512,
+    "Threshold": 0.5
+  },
+  "Embedding": {
+    "ModelPath": "Models/multilingual-e5-small.onnx",
+    "TokenizerPath": "Models/sentencepiece.bpe.model",
+    "MaxTokens": 512
   }
 }
