--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ nul
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+*.onnx
+*.model
 # Mono auto generated files
 mono_crash.*
 
@@ -34,7 +36,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
-
+server/Phlox.API/Models
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
