--- a/server/Phlox.API/appsettings.json
+++ b/server/Phlox.API/appsettings.json
@@ -22,7 +22,7 @@
     "Host": "localhost",
     "Port": 6334,
     "CollectionName": "documents",
-    "VectorSize": 384,
+    "VectorSize": 1536,
     "UseTls": false
   },
   "DocumentSlicer": {
@@ -31,9 +31,9 @@
     "MaxLength": 512,
     "Threshold": 0.5
   },
-  "Embedding": {
-    "ModelPath": "Models/multilingual-e5-small.onnx",
-    "TokenizerPath": "Models/sentencepiece.bpe.model",
-    "MaxTokens": 512
+  "OpenAi": {
+    "ApiKey": "your-openai-api-key",
+    "Model": "text-embedding-3-small",
+    "Dimensions": 1536
   }
 }
